--- a/Telefonia/views/newlayout/base copy.html
+++ b/Telefonia/views/newlayout/base copy.html
@@ -4,11 +4,11 @@
     <title>Telefonico</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="/css/uikit.css"/>
-    <link rel="stylesheet" href="/css/styles.css"/>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/uikit.js"></script>
-    <script src="/js/uikit-icons.js"></script>
+    <link rel="stylesheet" href="../../public/css/uikit.css"/>
+    <link rel="stylesheet" href="../../public/css/styles.css"/>
+    <script src="../../public/js/jquery.min.js"></script>
+    <script src="../../public/js/uikit.js"></script>
+    <script src="../../public/js/uikit-icons.js"></script>
     <!-- mapas -->
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
@@ -26,31 +26,7 @@
 </head>
 <body>
 
-<!-- NOTIFICACION -->
-{{#if mensaje}}
-<script>
-    UIkit.notification({message: '{{ mensaje }}', status: 'success'})
-</script>
-{{/if}}
-<script>
-    var mensaje = getUrlParameter('mensaje');
-    var tipoMensaje = getUrlParameter('tipoMensaje');
 
-    if ( mensaje != ""){
-        if (tipoMensaje == "" ){
-            tipoMensaje = 'primary';
-        }
-        UIkit.notification({message: mensaje, status: tipoMensaje})
-    }
-
-    function getUrlParameter(name) {
-        name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
-        var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
-        var results = regex.exec(location.search);
-        return results === null ? '' :
-            decodeURIComponent(results[1].replace(/\+/g, ' '));
-    };
-</script>
 <!--HEADER-->
 <header class="header-big-container">
     <div class="header-contaiter-1">
@@ -59,20 +35,18 @@
         <a>Area Clientes</a>
     </div>
     <div class="header-contaiter-2">
-        <a href="/"><img width="400" src="images/nombre.png" alt=""></a>
+        <a href="/"><img width="400" src="../../public/images/nombre.png" alt=""></a>
     </div>
     <div class="header-contaiter-3">
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Línea Internet</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Línea Móvil</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Línea TV</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Packs</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Móviles y más</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Herramientas</span></a>
-        <a><img  src="images/header/linea-internet.png" alt=""><span>Ayuda</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Línea Internet</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Línea Móvil</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Línea TV</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Packs</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Móviles y más</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Herramientas</span></a>
+        <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Ayuda</span></a>
     </div>
 </header>
-
-{{{content}}}
 
 <!--FOOTER-->
 <footer class="uk-section-secondary">
