--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
+    <link rel="stylesheet" href="../../public/css/packs.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -47,6 +48,50 @@
         <a><img  src="../../public/images/header/linea-internet.png" alt=""><span>Ayuda</span></a>
     </div>
 </header>
+
+
+<div class="packs-content">
+    <h1>Packs Telefónico</h1>
+    <div class="packs-container">
+        <div class="pack">
+            <h2>Pack Básico</h2>
+            <ul>
+                <li>5 GB Internet</li>
+                <li>1 Línea Móvil</li>
+                <li>Pack TV Series</li>
+            </ul>
+            <p>15,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
+        </div>
+        <div class="pack">
+            <h2>Pack Medio</h2>
+            <ul>
+                <li>30 GB Internet</li>
+                <li>1 Línea Móvil</li>
+                <li>Llamadas infinitas</li>
+                <li>Pack TV Series + Infantil</li>
+            </ul>
+            <p>25,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
+        </div>
+        <div class="pack">
+            <h2>Pack Avanzado</h2>
+            <ul>
+                <li>100 GB Internet</li>
+                <li>2 Líneas Móviles</li>
+                <li>Llamadas infinitas</li>
+                <li>Datos ilimitados</li>
+                <li>Pack TV Series + Infantil</li>
+            </ul>
+            <p>37,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
+        </div>
+    </div>
+
+    <h2>Configuta tu pack a medida</h2>
+    <p>Puede acceder a nuestro configurador de packs para personalizar un pack a medida que se ajuste a sus necesidades. </p>
+    <img  src="../../public/images/slider2.png" alt="">
+</div>
 
 <!--FOOTER-->
 <footer class="uk-section-secondary">
