--- a/Telefonia/views/newlayout/packs.html
+++ b/Telefonia/views/newlayout/packs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/tools.css"/>
+    <link rel="stylesheet" href="../../public/css/packs.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -51,34 +51,46 @@
 
 
 <div class="content">
-    <h1>Herramientas</h1>
-    <div class="tools-container">
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/slider1.png" >
-            <div class="tool-info-cont">
-                <h2>Test de Velocidad Internet</h2>
-                <p>Analice la velocidad de su línea de internet y compárela con nuestras tarifas de internet.</p>
-                <button class="button">VER MÁS</button>
-            </div>
+    <h1>Packs Telefónico</h1>
+    <div class="packs-container">
+        <div class="pack">
+            <h2>Pack Básico</h2>
+            <ul>
+                <li>5 GB Internet</li>
+                <li>1 Línea Móvil</li>
+                <li>Pack TV Series</li>
+            </ul>
+            <p>15,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
         </div>
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/slider2.png" >
-            <div class="tool-info-cont">
-                <h2>Configurador de packs</h2>
-                <p>Cree sus packs de Internet, Móvil y TV personalizados y consulte el precio final con nuestro configurador de packs.</p>
-                <button class="button">VER MÁS</button>
-            </div>
+        <div class="pack">
+            <h2>Pack Medio</h2>
+            <ul>
+                <li>30 GB Internet</li>
+                <li>1 Línea Móvil</li>
+                <li>Llamadas infinitas</li>
+                <li>Pack TV Series + Infantil</li>
+            </ul>
+            <p>25,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
         </div>
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/slider1.png" >
-            <div class="tool-info-cont">
-                <h2>Buscador de tiendas</h2>
-                <p>Encuentra la tienda más cercana, consulta su horario y disponibilidad para recibir pedidos.</p>
-                <button class="button">VER MÁS</button>
-            </div>
+        <div class="pack">
+            <h2>Pack Avanzado</h2>
+            <ul>
+                <li>100 GB Internet</li>
+                <li>2 Líneas Móviles</li>
+                <li>Llamadas infinitas</li>
+                <li>Datos ilimitados</li>
+                <li>Pack TV Series + Infantil</li>
+            </ul>
+            <p>37,99 €/mes</p>
+            <button class="button">CONTRATAR</button>
         </div>
     </div>
-    
+
+    <h2>Configuta tu pack a medida</h2>
+    <p>Puede acceder a nuestro configurador de packs para personalizar un pack a medida que se ajuste a sus necesidades. </p>
+    <img  src="../../public/images/slider2.png" alt="">
 </div>
 
 <!--FOOTER-->
