added price alarm

--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -51,13 +51,17 @@
 <div class="alarm-content">
     <h1>Servicio de Alarmas</h1>
     <div class="alarm-card">
-        <a href="/"><img width="400" src="../../public/images/alarma.jpg" alt=""></a>
-        <ul>
-            <li>Graba las 24h</li>
-            <li>Respuesta en menos de 29 segundos</li>
-            <li>Técnicos especializados 24h los 365 días del año</li>
-            <li>Instalación en menos de 72h</li>
-        </ul>
+        <a href="/"><img width="600" src="../../public/images/alarma.jpg" alt=""></a>
+        <div class="alarm-right-panel">
+            <ul>
+                <li>Graba las 24h</li>
+                <li>Respuesta en menos de 29 segundos</li>
+                <li>Técnicos especializados 24h los 365 días del año</li>
+                <li>Instalación en menos de 72h</li>
+            </ul>
+            <p class="alarm-price"><strong>36,99 €/mes</strong></p>
+            <button class="button">CONTRATAR</button>
+        </div>
     </div>
     <h2>Detalles</h2>
     <div >
