--- a/Telefonia/public/css/alarm.css
+++ b/Telefonia/public/css/alarm.css
@@ -14,3 +14,25 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     margin-top: 5vh;
 }
+
+.alarm-right-panel{
+    display: grid;
+    justify-content: center;
+    padding: 2vh;
+}
+
+.alarm-price {
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
