--- a/Telefonia/views/newlayout/alarmas.html
+++ b/Telefonia/views/newlayout/alarmas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/tools.css"/>
+    <link rel="stylesheet" href="../../public/css/alarm.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -26,7 +26,6 @@
     </style>
 </head>
 <body>
-
 
 <!--HEADER-->
 <header class="header-big-container">
@@ -49,36 +48,45 @@
     </div>
 </header>
 
-
-<div class="content">
-    <h1>Móviles y más</h1>
-    <div class="tools-container">
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/slider1.png" >
-            <div class="tool-info-cont">
-                <h2>Móviles</h2>
-                <p>Consulte nuestro catálogo de <strong>dispositivos móviles</strong>: Apple, Samsung, Xiaomi y más modelos. Ofrecemos modelos tanto nuevos como <strong>seminuevos</strong> al <strong>mejor precio garantizado</strong></p>
-                <button class="button">VER MÁS</button>
-            </div>
-        </div>
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/luz.jpg" >
-            <div class="tool-info-cont">
-                <h2>Objetos inteligentes</h2>
-                <p>También ofrecemos otra serie de objetos inteligentes que le pueden ayudar en su día a día. En esta sección podrá ver los <strong>relojes, enchufes, luces,</strong> y otros dispositivos inteligentes ofrecidos por Telefónico</p>
-                <button class="button">VER MÁS</button>
-            </div>
-        </div>
-        <div class="tool">
-            <img class="tool-img" src="../../public/images/alarma.jpg" >
-            <div class="tool-info-cont">
-                <h2>Alarmas</h2>
-                <p>Proteja su hogar con nuestro servicio de <strong>alarmas.</strong> Ofrecemos alarmas <strong>anti instrusión</strong> y de <strong>seguridad </strong> ocultas, con <strong>instalación y mantenimiento incluidos.</strong></p>
-                <button class="button">VER MÁS</button>
-            </div>
+<div class="alarm-content">
+    <h1>Servicio de Alarmas</h1>
+    <div class="alarm-card">
+        <a href="/"><img width="600" src="../../public/images/alarma.jpg" alt=""></a>
+        <div class="alarm-right-panel">
+            <ul>
+                <li>Graba las 24h</li>
+                <li>Respuesta en menos de 29 segundos</li>
+                <li>Técnicos especializados 24h los 365 días del año</li>
+                <li>Instalación en menos de 72h</li>
+            </ul>
+            <p class="alarm-price"><strong>36,99 €/mes</strong></p>
+            <button class="button">CONTRATAR</button>
         </div>
     </div>
-    
+    <h2>Detalles</h2>
+    <div >
+        <p>Proteja su hogar con unas alarmas más completas. En Telefónico ofrecemos alarmas anti intrusiín y de seguridad ocultas</p>
+        <p>Válido para:</p>
+        <ul>
+            <li>Adosado o chales</li>
+            <li>Piso</li>
+            <li>Ático o bajo</li>
+        </ul>
+        <p>Para más información, contacta al 900 311 806</p>
+    </div>
+    <h2>Dispositivos aicionales</h2>
+    <div>
+        <p>Podrá incluir tantos dispositivos de la lista como sean necesarios sin coste adicional:</p>
+        <ul>
+            <li>Panel de comunicación</li>
+            <li>Sirena exterios</li>
+            <li>Plata y teclado</li>
+            <li>Sistema de alimentación interrumpuda (SAI)</li>
+            <li>LLaves inteligentes</li>
+            <li>Detectores con cámara</li>
+            <li>Cámaras móviles</li>
+        </ul>
+    </div>
 </div>
 
 <!--FOOTER-->
