--- a/Telefonia/public/css/test-velocidad.css
+++ b/Telefonia/public/css/test-velocidad.css
@@ -9,7 +9,7 @@
 .test-v-cont{
     line-height: 1.3em;
 }
-.bb{
+.internet-img{
     display: grid;
     justify-content: center;
     align-items: center;
