--- a/Telefonia/views/newlayout/test-velocidad.html
+++ b/Telefonia/views/newlayout/test-velocidad.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/productos.css"/>
+    <link rel="stylesheet" href="../../public/css/alarm.css"/>
+    <link rel="stylesheet" href="../../public/css/test-velocidad.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -26,7 +27,6 @@
     </style>
 </head>
 <body>
-
 
 <!--HEADER-->
 <header class="header-big-container">
@@ -49,71 +49,25 @@
     </div>
 </header>
 
-
-<div class="productos-content">
-    <div class="productos-left-panel">
-        <h2>Área Cliente</h2>
-        <a>Mi información</a>
-        <a>Mis Notificaciones</a>
-        <a>Mis Facturas</a>
-        <a><strong>Mis Productos Contratados</strong></a>
-        <a>Mis productos</a>
-        <a>Configuración Roaming</a>
-    </div>
-    <div class="productos-right-panel">
-        <h2>Productos que has contratado</h2>
-        <div class="producto-card">
-            <div class="producto-card-left">
-                <h3>Fibra 1 GB + La Sinfín GB Infinitos (V5) </h3>
-                <div class="product-details">
-                    <div>
-                        <p>984502855 + Internet</p>
-                        <p>Internet: 1Gbps</p>
-                        <p>Llamadas a fijos: Infinitas</p>
-                        <p>LLamadas a móviles: 60 minutos</p>
-                    </div>
-                    <div>
-                        <p>639256984</p>
-                        <p>Llamadas: Infinitas</p>
-                        <a>Ver bonos y consumo</a><br><br><br>
-                        <a>Configurar Roaming</a>
-                    </div>
-                </div>
+<div class="alarm-content">
+    <h1>Test de velocidad</h1>
+    <div class="alarm-card">
+        <a href="/" class="internet-img"><img width="300" src="../../public/images/internet.png" alt=""></a>
+        <div class="alarm-right-panel">
+            <h2>Prueba tu conexión</h2>
+            <div class="test-v-cont">
+                <p>El test de velocidad más fiable para comprobar tu <strong>conexión</strong> y <strong>velocidad</strong> de internet</p>
+                <p>Indicaciones:</p>
+                <ul class="test-v">
+                    <li>Te recomendamos usar Chrome o Firefox. Si usas Internet Explorer este tipo de test puede dar resultados no satisfactorios</li>
+                    <li>Cierra todas las aplicaciones o programas que tengan conexión a internet</li>
+                    <li>Se consigue más velocidad conectándose por cable directamente al router</li>
+                </ul>
             </div>
-            <div class="producto-card-right">
-                <h3>79,00 €/mes </h3>
-                <button class="button">Cambiar Tarifa</button>
-                <button class="button">Cancelar Tarifa</button>
-                
-            </div>
+            <button class="button">INICIAR EL TEST</button>
         </div>
-        <div class="producto-card">
-            <div class="producto-card-left">
-                <h3>Fibra 1 GB + La Sinfín GB Infinitos (V5) </h3>
-                <div class="product-details">
-                    <div>
-                        <p>984502855 + Internet</p>
-                        <p>Internet: 1Gbps</p>
-                        <p>Llamadas a fijos: Infinitas</p>
-                        <p>LLamadas a móviles: 60 minutos</p>
-                    </div>
-                    <div>
-                        <p>639256984</p>
-                        <p>Llamadas: Infinitas</p>
-                        <a>Ver bonos y consumo</a><br><br><br>
-                        <a>Configurar Roaming</a>
-                    </div>
-                </div>
-            </div>
-            <div class="producto-card-right">
-                <h3>79,00 €/mes </h3>
-                <button class="button">Cambiar Tarifa</button>
-                <button class="button">Cancelar Tarifa</button>
-                
-            </div>
-        </div>
-
     </div>
+   
 </div>
 
 <!--FOOTER-->
