--- a/Telefonia/views/newlayout/base.html
+++ b/Telefonia/views/newlayout/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/productos.css"/>
+    <link rel="stylesheet" href="../../public/css/grandes-empresas.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -50,70 +50,59 @@
 </header>
 
 
-<div class="productos-content">
-    <div class="productos-left-panel">
-        <h2>Área Cliente</h2>
-        <a>Mi información</a>
-        <a>Mis Notificaciones</a>
-        <a>Mis Facturas</a>
-        <a><strong>Mis Productos Contratados</strong></a>
-        <a>Mis productos</a>
-        <a>Configuración Roaming</a>
+<div class="content">
+    <h1>Grandes Empresas</h1>
+    <div class="empresas-banner">
+        <h2>Casos de Éxito</h2>
+        <img class="empresa-img" src="../../public/images/slider1.png" >
+        <img class="empresa-img" src="../../public/images/slider1.png" >
+        <img class="empresa-img" src="../../public/images/slider1.png" >
+        <img class="empresa-img" src="../../public/images/slider1.png" >
+        <img class="empresa-img" src="../../public/images/slider1.png" >
     </div>
-    <div class="productos-right-panel">
-        <h2>Productos que has contratado</h2>
-        <div class="producto-card">
-            <div class="producto-card-left">
-                <h3>Fibra 1 GB + La Sinfín GB Infinitos (V5) </h3>
-                <div class="product-details">
-                    <div>
-                        <p>984502855 + Internet</p>
-                        <p>Internet: 1Gbps</p>
-                        <p>Llamadas a fijos: Infinitas</p>
-                        <p>LLamadas a móviles: 60 minutos</p>
-                    </div>
-                    <div>
-                        <p>639256984</p>
-                        <p>Llamadas: Infinitas</p>
-                        <a>Ver bonos y consumo</a><br><br><br>
-                        <a>Configurar Roaming</a>
-                    </div>
-                </div>
+    <div class="contacto-empresa-container">
+        <div class="contacto-empresa">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <div class="info-contact-empresas">
+                <h3>¿Estás interesado? Contacta con el servicio de ventas.</h3>
+                <p> Contacta con nuestro servicio de ventas y haremos un <strong>estudio personalizados</strong> a tu empresa. De esta forma podremos darte una <strong>oferta única</strong> que se ajuste perfectamente a sus necesidades. Si lo prefieres, puedes llamar al <strong>900 123 123</strong></p>
             </div>
-            <div class="producto-card-right">
-                <h3>79,00 €/mes </h3>
-                <button class="button">Cambiar Tarifa</button>
-                <button class="button">Cancelar Tarifa</button>
-                
+            <button class="button">Contactar</button>
+        </div>
+    </div>
+    <h2>Servicios para grandes empresas</h2>
+    <div class="grandes-empresas-container">
+        <div class="empresa">
+            <img class="empresa-img" src="../../public/images/slider1.png" >
+            <div class="empresa-info-cont">
+                <h3>Housing</h3>
+                <div>
+                    <p>El Housing es la solución que permite a los clientes alojar sus sistema de información e infrastructuras críticas en Centros de Datos Profesionales.</p>
+                    <ul>
+                        <li>Salida a Internet redundada y protegida en Centro de Datos Profesionales.</li>
+                        <li>Servicios profesionales de administración: Manos remotas y servicios profesionales de administración delegada.</li>
+                    </ul>
+                </div>    
+                <button class="button">VER MÁS</button>
             </div>
         </div>
-        <div class="producto-card">
-            <div class="producto-card-left">
-                <h3>Fibra 1 GB + La Sinfín GB Infinitos (V5) </h3>
-                <div class="product-details">
-                    <div>
-                        <p>984502855 + Internet</p>
-                        <p>Internet: 1Gbps</p>
-                        <p>Llamadas a fijos: Infinitas</p>
-                        <p>LLamadas a móviles: 60 minutos</p>
-                    </div>
-                    <div>
-                        <p>639256984</p>
-                        <p>Llamadas: Infinitas</p>
-                        <a>Ver bonos y consumo</a><br><br><br>
-                        <a>Configurar Roaming</a>
-                    </div>
+        <div class="empresa">
+            <img class="empresa-img" src="../../public/images/slider2.png" >
+            <div class="empresa-info-cont">
+                <h3>Copia de seguridad en la nube</h3>
+                <div>
+                    <p>Si no quiere preocuparse por tener que guardar sus copias de seguridad en algún lugar seguro, nosostros lo hacemos por usted.</p>
+                    <ul>
+                        <li>Espacio de almacenamiento infinito</li>
+                        <li>Pague solamente por el espacio ocupado</li>
+                        <li>Redundancia de almacenamiento en 3 localizaciones diferentes</li>
+                        <li>Acceso a los datos 24/7</li>
+                    </ul>
                 </div>
-            </div>
-            <div class="producto-card-right">
-                <h3>79,00 €/mes </h3>
-                <button class="button">Cambiar Tarifa</button>
-                <button class="button">Cancelar Tarifa</button>
-                
+                <button class="button">VER MÁS</button>
             </div>
         </div>
-
-    </div>
+    </div>    
 </div>
 
 <!--FOOTER-->
