--- a/Telefonia/views/newlayout/pequeñas-empresas.html
+++ b/Telefonia/views/newlayout/pequeñas-empresas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/grandes-empresas.css"/>
+    <link rel="stylesheet" href="../../public/css/pequeñas-empresas.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -22,23 +22,6 @@
         .map {
             height: 400px;
             width: 100%;
-        }
-
-
-        .emp-content{
-            display: grid;
-            grid-template-rows: 5% 25% 10% auto ;
-            margin: 5vh 0px ; 
-            height: 160vh;
-        }
-
-
-        .emp-content h2,h1{
-            text-align: center;
-        }
-
-        .emp-content h2{
-            font-size: 1.9em;
         }
     </style>
 </head>
@@ -67,19 +50,49 @@
 </header>
 
 
-<div class="emp-content">
-    <h1>Empresas</h1>
-    <div class="empresas-banner">
-        <h2>Casos de Éxito</h2>
-        <img class="empresa-img" src="../../public/images/slider1.png" >
-        <img class="empresa-img" src="../../public/images/slider1.png" >
-        <img class="empresa-img" src="../../public/images/slider1.png" >
-        <img class="empresa-img" src="../../public/images/slider1.png" >
-        <img class="empresa-img" src="../../public/images/slider1.png" >
+<div class="content">
+    <h1>Pequeñas Empresas y Autónomos</h1>
+    <h2>NUESTRAS <strong>TARIFAS</strong> DE <strong> LÍNEAS MÓVILES</strong></h2>
+    <div class="tarifas-empresas">
+      <div class="tarifa-empresa">
+          <h3><strong>19,99 €/mes</strong></h3>
+          <div class="info-tarifa-empresa">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <p> 10Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+          </div>
+        <button class="button">Contratar</button>
+      </div>
+      <div class="tarifa-empresa">
+        <h3><strong>29,99 €/mes</strong></h3>
+        <div class="info-tarifa-empresa">
+          <img  src="../../public/images/header/linea-internet.png" alt="">
+          <p> 200Gb de datos al mes y <strong>llamadas ilimitadas</strong></p>
+        </div>
+      <button class="button">Contratar</button>
     </div>
-
-    <h2>Servicios para grandes empresas</h2>
-    <div class="grandes-empresas-container">
+    <div class="tarifa-empresa">
+        <h3><strong>49,99 €/mes</strong></h3>
+        <div class="info-tarifa-empresa">
+          <img  src="../../public/images/header/linea-internet.png" alt="">
+          <p><strong>Gb infinitos</strong> de datos al meás y <strong>llamadas ilimitadas</strong></p>
+        </div>
+      <button class="button">Contratar</button>
+    </div>
+    
+       
+    </div>
+    <div class="contacto-empresa-container">
+        <div class="contacto-empresa">
+            <img  src="../../public/images/header/linea-internet.png" alt="">
+            <div class="info-contact-empresas">
+                <h3>Soy una empresa pequeña y necesito otra línea de móvil</h3>
+                <p>Sólo para pequñas empresas y autónomos ofrecemos tantas líneas extra cómo quieras. Cada una al 50% del precio original, para siempre.</p>
+            </div>
+            <button class="button">Contratar</button>
+        </div>
+    </div>
+    <h2>Servicios para pequeñas empresas y autónomos</h2>
+    <div class="pequeñas-empresas-container">
         <div class="empresa">
             <img class="empresa-img" src="../../public/images/slider1.png" >
             <div class="empresa-info-cont">
@@ -142,7 +155,7 @@
                 <ul class="uk-list uk-list-bullet">
                     <li><a href="/e_pequenas">Casos de éxito</a></li>
                     <li><a href="/packs">Pequeñas empresas</a></li>
-                    <li><a href="/internet">Grandes empresas</a></li>
+                    <li><a href="/internet">pequeñas empresas</a></li>
                 </ul>
             </div>
             <div>
