--- a/Telefonia/views/newlayout/ayuda.html
+++ b/Telefonia/views/newlayout/ayuda.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="../../public/css/uikit.css"/>
     <link rel="stylesheet" href="../../public/css/styles.css"/>
-    <link rel="stylesheet" href="../../public/css/preguntas.css"/>
+    <link rel="stylesheet" href="../../public/css/ayuda.css"/>
     <script src="../../public/js/jquery.min.js"></script>
     <script src="../../public/js/uikit.js"></script>
     <script src="../../public/js/uikit-icons.js"></script>
@@ -51,37 +51,32 @@
 
 
 <div class="content">
-    <h1>Preguntas frecuentes</h1>
-    <div class="preguntas-container">
-       <div class="preguntas-filtro">
-            <select name="tipo" id="tipo-combo">
-                <option value="tipo" >Tipo</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-                <option value="audi">Audi</option>
-          </select>
-          <input type="text" id="fname" name="fname" placeholder="Buscar..."><br><br>
-       </div>
-       <h2>Resultados de la búsqueda</h2>
-       <div class="preguntas-resultado">
-            <div class="preguntas-seccion">
-                <a><h3>Mando a distacia</h3></a>
-                <a><img  src="../../public/images/icons/flecha.png" width="30" alt=""></a>
-            </div> 
-            <div class="preguntas-seccion">
-                <a><h3>Consulta tu cobertura</h3></a>
-                <a><img  src="../../public/images/icons/flecha.png" width="30" alt=""></a>
-            </div> 
-            <div class="preguntas-seccion">
-                <a><h3>Instalación</h3></a>
-                <a><img  src="../../public/images/icons/flecha.png" width="30" alt=""></a>
-            </div> 
-            <div class="preguntas-seccion">
-                <a><h3>Garantía y devolución</h3></a>
-                <a><img  src="../../public/images/icons/flecha.png" width="30" alt=""></a>
-            </div> 
-       </div>
-       <h3>¿No encuentras lo que buscas? Accede al listado completo de <a>preguntas frecuentes</a></h3>
+    <h1>Ayuda</h1>
+    <div class="ayuda-container">
+        <div class="ayuda">
+            <img class="ayuda-img" src="../../public/images/slider1.png" >
+            <div class="ayuda-info-cont">
+                <h2>Contacto</h2>
+                <p>Póngase en contacto con nosotros si no encuentra lo que busca o tiene alguna duda</p>
+                <button class="button">VER DATOS DE CONTACTO</button>
+            </div>
+        </div>
+        <div class="ayuda">
+            <img class="ayuda-img" src="../../public/images/slider2.png" >
+            <div class="ayuda-info-cont">
+                <h2>Preguntas más frecuentes</h2>
+                <p>Consulte las preguntas más frecuentes de nuestros usuarios.</p>
+                <button class="button">CONSULTAR PREGUNTA FRECUENTES</button>
+            </div>
+        </div>
+        <div class="ayuda">
+            <img class="ayuda-img" src="../../public/images/slider1.png" >
+            <div class="ayuda-info-cont">
+                <h2>Asistencia y soporte técnico</h2>
+                <p>Disponemos de un personale técnico disponible las 24h del día para ayudarle a solucionar culquier problema con sus servicios contratados.</p>
+                <button class="button">VER MÁS</button>
+            </div>
+        </div>
     </div>
     
 </div>
